WP-8955 exec-ed and seed page title alignment issue fixes

--- a/css/style.css
+++ b/css/style.css
@@ -2880,6 +2880,11 @@ del {
   }
 }
 
+.no-sidebars.page-seed.panels-layout-gsb-full-bleed-page h1.title,
+.no-sidebars.page-exec-ed.panels-layout-gsb-full-bleed-page h1.title {
+  margin-left: 80px;
+}
+
 .offscreenText {
   text-indent: -119988px;
   overflow: hidden;
