--- a/sass/partials/base/05-layouts/_layouts.sass
+++ b/sass/partials/base/05-layouts/_layouts.sass
@@ -859,3 +859,8 @@
           padding-top: 65px
         +breakpoint($bp-for-desktop-up)
           padding-top: 80px
+
+.no-sidebars.page-seed.panels-layout-gsb-full-bleed-page,
+.no-sidebars.page-exec-ed.panels-layout-gsb-full-bleed-page
+  h1.title
+    margin-left: 80px
